--- a/HealthtimeJournal/res/layout/register_partner_activity.xml
+++ b/HealthtimeJournal/res/layout/register_partner_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/login_background"
-    tools:context=".RegisterPage3Activity" >
+    tools:context=".RegisterPartnerActivity" >
 
     <TextView 
 		        android:layout_width="match_parent"
@@ -12,7 +12,7 @@
 		        android:gravity="center_horizontal"
 		        android:layout_marginTop="50dip"
 		        android:layout_marginBottom="50dip"
-		        android:text="@string/reg_3"
+		        android:text="@string/reg_part"
 		        android:textSize="28sp"
 		        android:textColor="@color/white"
 		        android:textStyle="bold"
