image in post working, image retrieval not yet

--- a/HealthtimeJournal/res/layout/post.xml
+++ b/HealthtimeJournal/res/layout/post.xml
@@ -21,6 +21,7 @@
     
     <ImageView
         android:id="@+id/postPageImage"
+        android:contentDescription="@string/description"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp" />
