fixed errors, combined comment not working yet

--- a/HealthtimeJournal/res/layout/post_page_comment_one.xml
+++ b/HealthtimeJournal/res/layout/post_page_comment_one.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@android:drawable/btn_default"
+    android:id="@+id/mainLayout" >
     
     <LinearLayout android:id="@+id/thumbnail"
 		android:layout_width="wrap_content"
@@ -13,6 +15,7 @@
 	    android:layout_marginRight="5dip" >
 
 		<ImageView
+		    android:contentDescription="@string/description"
 			android:id="@+id/commentFriendImage"
 	        android:layout_width="50dip"
 	        android:layout_height="50dip" />
