--- a/HealthtimeJournal/res/layout/create_doctor_page.xml
+++ b/HealthtimeJournal/res/layout/create_doctor_page.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:background="@color/light_gray"
         android:textStyle="bold"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:id="@+id/createDoctorText"/>
     <ScrollView 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
