--- a/HealthtimeJournal/res/layout/doctor_profile.xml
+++ b/HealthtimeJournal/res/layout/doctor_profile.xml
@@ -1,63 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <ScrollView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/light_gray"
+        android:padding="10dp"
+        android:text="@string/doctor_profile"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/doctorProfileImage"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fillViewport="true" >
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/description" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+    <TextView
+        android:id="@+id/doctorProfileName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/doctorProfileImage"
-                android:layout_width="150dip"
-                android:layout_height="150dip" />
+    <TextView
+        android:id="@+id/doctorProfileSpecialty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/doctorProfileName"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-			
-			<TextView
-                android:id="@+id/doctorProfileSpecialty"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/doctorProfileHospitals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/doctorProfileHospitals"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/doctorProfileHospitalAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/doctorProfileConsulSched"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/doctorProfileConsulSched"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/doctorProfileContactNum"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/doctorProfileContactNum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/doctorProfileChildrenButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/children_under" />
-
-            <Button
-                android:id="@+id/doctorProfileSettingsButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/edit_info" />
-            
-        </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
+</LinearLayout>
