--- a/HealthtimeJournal/res/layout/edit_parent_photo_page.xml
+++ b/HealthtimeJournal/res/layout/edit_parent_photo_page.xml
@@ -10,11 +10,12 @@
         android:id="@+id/editParentImage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp" />
     
     <LinearLayout
         android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"
+    	android:layout_height="wrap_content"
     	android:orientation="horizontal"
     	android:layout_margin="3dp">
     	
@@ -40,5 +41,12 @@
             android:layout_weight="5"/>
     
     </LinearLayout>
+    
+    <Button
+        android:id="@+id/setParentImage"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="@string/setParent" />
 
 </LinearLayout>
