--- a/HealthtimeJournal/res/layout/register_family_activity.xml
+++ b/HealthtimeJournal/res/layout/register_family_activity.xml
@@ -2,9 +2,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterFamilyActivity"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    tools:context=".RegisterFamilyActivity" >
+    
+    <TextView
+        android:text="@string/reg_family"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/light_gray"
+        android:textStyle="bold"
+        android:padding="10dp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/email"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/familyEmailText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/limit_username"
+        android:inputType="textEmailAddress"
+        android:padding="10dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/pass"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/familyPasswordText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/limit_password"
+        android:inputType="textPassword"
+        android:padding="10dp" />
+
+    <!--
     <MultiAutoCompleteTextView 
         android:id="@+id/nameEditText"
         android:layout_width="fill_parent"
@@ -18,16 +57,17 @@
     	android:completionThreshold="1"
     	android:maxLines="3"
     	android:lines="3"/>
-    
-    <Button 
-		        android:id="@+id/regButton"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/register_fam"
-		        android:layout_margin="10dp"
-		        android:background="@color/maroon"
-		        android:textColor="@color/white"
-		        android:textStyle="bold"
-		        android:fontFamily="sans-serif-light"/>
+    -->
+
+    <Button
+        android:id="@+id/regButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/maroon"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/register_fam"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
 </LinearLayout>
