--- a/HealthtimeJournal/res/layout/register_family_activity.xml
+++ b/HealthtimeJournal/res/layout/register_family_activity.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".RegisterFamilyActivity" >
+    android:orientation="vertical" >
     
     <TextView
         android:text="@string/reg_family"
