--- a/HealthtimeJournal/res/layout/shared_account_item_layout.xml
+++ b/HealthtimeJournal/res/layout/shared_account_item_layout.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_margin="5dp" >
 
     <TextView 
         android:id="@+id/shared_account_item_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
+    
+    <TextView 
+        android:id="@+id/shared_account_item_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
