--- a/HealthtimeJournal/res/layout/timeline_item.xml
+++ b/HealthtimeJournal/res/layout/timeline_item.xml
@@ -1,68 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
-
-    <LinearLayout 
+    android:background="@color/white"
+    android:orientation="vertical" >
+    
+    <LinearLayout
+        android:id="@+id/layout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    	<TextView
-        	android:id="@+id/timeline_item_username"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:lines="1"
-        	android:layout_weight="1"
-        	android:textSize="16sp"/> 
-        <TextView
-        	android:id="@+id/timeline_item_x"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="@string/cross_mark"
-        	android:gravity="right"
-        	android:paddingRight="5dp"
-        	android:lines="1"
-        	android:layout_weight="1"
-        	android:textSize="16sp"/>   
-    </LinearLayout>
-    
-    
-    <TextView
-        android:id="@+id/timeline_item_time"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:lines="1"
-        android:textSize="16sp"/>
-    
-    <TextView
-        android:id="@+id/timeline_item_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:lines="1"
-        android:textSize="16sp"/>
-    <LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    	<Button
-        	android:text="@string/view_comment" 
-        	android:id="@+id/timeline_item_button"
-        	android:layout_width="match_parent" 
-        	android:lines="1"
-        	android:textSize="12sp"
-        	android:layout_height="wrap_content"
-        	android:background="@color/white"
-        	android:layout_weight="1"/>    
-        <Button
-        	android:text="@string/share_post" 
-        	android:id="@+id/timeline_item_button1"
-        	android:layout_width="match_parent"
-        	android:lines="1"
-        	android:textSize="12sp"
-        	android:layout_height="wrap_content"
-        	android:background="@color/white"
-        	android:layout_weight="1"/> 
-    </LinearLayout>
-    
+        android:orientation="vertical"
+        android:layout_alignParentTop="true" >
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/timeline_item_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:lines="1"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/timeline_item_x"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:lines="1"
+                android:paddingRight="5dp"
+                android:text="@string/cross_mark"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/timeline_item_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/timeline_item_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:textSize="16sp" />
+    </LinearLayout>
+    
+    <ImageView
+        android:id="@+id/timelineParentImage"
+        android:layout_width="15dip"
+        android:layout_height="15dip"
+        android:contentDescription="@string/description"
+        android:layout_toLeftOf="@id/layout1" />
+
+    <ImageView
+        android:id="@+id/timelinePostImage"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/description"
+        android:layout_below="@id/layout1" />
+    
+    <Button
+        android:id="@+id/timeline_item_button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:lines="1"
+        android:text="@string/share_post"
+        android:textSize="12sp"
+        android:layout_below="@id/timelinePostImage" />
+
+</RelativeLayout>
