Fixed setting of privilege

--- a/HealthtimeJournal/res/values/arrays.xml
+++ b/HealthtimeJournal/res/values/arrays.xml
@@ -34,4 +34,10 @@
         <item>Shared To</item>
     </string-array>
     
+    <string-array name="parentItem">
+        <item>Profile</item>
+        <item>Children</item>
+        <item>Album</item>
+    </string-array>
+    
 </resources>
