--- a/HealthtimeJournal/res/layout/shared_account_item_layout.xml
+++ b/HealthtimeJournal/res/layout/shared_account_item_layout.xml
@@ -15,6 +15,8 @@
     <TextView 
         android:id="@+id/shared_account_item_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:textSize="20sp"/>
 
 </LinearLayout>
