--- a/HealthtimeJournal/res/layout/shared_account_item_layout.xml
+++ b/HealthtimeJournal/res/layout/shared_account_item_layout.xml
@@ -2,21 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="5dp" >
-
-    <TextView 
-        android:id="@+id/shared_account_item_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
+    android:orientation="horizontal"
+    android:layout_margin="5dp" 
+    android:baselineAligned="false">
     
-    <TextView 
-        android:id="@+id/shared_account_item_description"
-        android:layout_width="match_parent"
+    <LinearLayout 
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:textSize="20sp"/>
+        android:layout_weight="1">
+        
+        <ImageView
+            android:id="@+id/shared_account_item_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/description"/>
+        
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="vertical">
+        
+	    <TextView 
+	        android:id="@+id/shared_account_item_label"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:textSize="18sp"
+	        android:textColor="@color/black"
+	        android:layout_gravity="left"/>
+	    
+	    <TextView 
+	        android:id="@+id/shared_account_item_description"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_margin="5dp"
+	        android:textSize="14sp"
+	        android:layout_gravity="left"/>
+	    
+	</LinearLayout>
 </LinearLayout>
